Update appendStatus